# Shamir_Secret_Sharing_practice

./: pyproject.toml
sss_algorithm/: main.py
sss_algorithm/sss/: constants.py  generate_share.py  recover_key.py
