[tool.poetry]
name = "sss-algorithm"
version = "0.1.0"
description = ""
authors = ["Tiny_Murky <murky0830@gmail.com>"]
readme = "README.md"
packages = [{ include = "sss_algorithm" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
start = "sss_algorithm.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
